<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_product"
        android:name="com.oded.food.delivery.provider.view.fragment.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.oded.food.delivery.provider.view.fragment.product.register.AddProductFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_add_product" />


    <fragment
        android:id="@+id/nav_home"
        android:name="com.oded.food.delivery.provider.view.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dispatch"
        android:name="com.oded.food.delivery.provider.view.fragment.dispatch.DispatchFragment"
        android:label="@string/menu_dispatch"
        tools:layout="@layout/fragment_dispatch" />

    <fragment
        android:id="@+id/nav_view_dispatch"
        android:name="com.oded.food.delivery.provider.view.fragment.dispatch.ViewDispatchFragment"
        android:label="@string/menu_view_dispatch"
        tools:layout="@layout/fragment_view_dispatch" />


    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.oded.food.delivery.provider.view.fragment.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />


    <fragment
        android:id="@+id/nav_setting_app"
        android:name="com.oded.food.delivery.provider.view.fragment.setting.SettingFragment"
        android:label="@string/app_setting"
        tools:layout="@layout/fragment_setting" />



</navigation>